# esp32-spi-message-demo

./: .gitignore  .gitmodules  README.md
ci/: build_all_projects.sh
flash_test/: sdkconfig.old
gpio_interrupts/: CMakeLists.txt  depthai_script.py  main.py  requirements.txt
image_part/: CMakeLists.txt  README.md  main.py
jpeg_demo/: CMakeLists.txt  README.md  main.py
jpeg_webserver_demo/: CMakeLists.txt
main/: CMakeLists.txt  SpiPacketParser.cpp  SpiPacketParser.hpp  app_main.c  app_main.cpp  esp32_spi_impl.c  spi_callbacks.c  spi_callbacks.h
main/common/: decode_mobilenet.c  decode_mobilenet.h  decode_raw_mobilenet.c  decode_raw_mobilenet.h  float16.c  float16.h
mjpeg_streaming_wifi/: CMakeLists.txt  README.md  main.py  main_lightweight.py  requirements.txt  sdkconfig.old
mjpeg_streaming_wifi/main/: CMakeLists.txt  file_server.cpp  main.cpp  main.hpp
mobilenet_raw/: CMakeLists.txt  README.md  requirements.txt
ota_test/: CMakeLists.txt  README.md
ota_test/main/: CMakeLists.txt  FlashMT25Q.cpp  FlashMT25Q.hpp  OtaServer.cpp  main.cpp  upload_script.html
parse_meta/: CMakeLists.txt  README.md  main.py
people-tracker/: CMakeLists.txt
people_tracker/: CMakeLists.txt  README.md
script_node_communication/: CMakeLists.txt  README.md  main.py  requirements.txt
spatial_image_detections/: CMakeLists.txt
spatial_location_calculator/: CMakeLists.txt
speed_benchmark/: CMakeLists.txt  main.py  requirements.txt
spi_in_landmark/: CMakeLists.txt  README.md  main.py  requirements.txt
spi_in_passthrough/: CMakeLists.txt  README.md  main.py
(+41 files in other folders)
